Changes in About Me Page

--- a/index.html
+++ b/index.html
@@ -207,11 +207,11 @@
 										</p>
 										
 										<p>
-											I am a professional who is diligent, punctual, and committed, with excellent communication skills, both with clients and colleagues. I quickly adapt to different situations, even under pressure, while maintaining motivation and openness to new ideas and working methods.
+											I'm a dedicated and reliable professional with a knack for being punctual and getting things done. I’ve got strong communication skills that help me work well with both clients and colleagues. Web and app development, along with design in general, are areas I’m really passionate about. That passion fuels my creativity and problem-solving skills, and I love coming up with fresh, practical solutions.
 										</p>
 
 										<p>
-											I am continuously seeking to enhance my skills, always striving to contribute effectively to the success of the team and the company.
+											I’m quick to adapt to new challenges and staying calm, even when things get hectic. I’m always open to new ideas and ways of working, and I keep looking for ways to improve and learn. My goal is to make meaningful contributions to the team and help the company succeed, while constantly pushing myself to grow.
 										</p>
 										
 									</div>
