--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 									<div class='service' >
 										
 										<div class='icon' >
-											<i class='icon-basic-photo' ></i>
+											<i class='ion-ios-monitor' ></i>
 										</div>
 										
 										<div class='content' >
