Filter in Projects Changes

--- a/index.html
+++ b/index.html
@@ -556,22 +556,7 @@
 							<ul class='portfolio-filters' >
 								<li>
 									<a href='#' class='active' data-group='all' >
-										All
-									</a>
-								</li>
-								<li>
-									<a href='#' data-group='web' >
-										Web
-									</a>
-								</li>
-								<li>
-									<a href='#' data-group='tech' >
-										Tech
-									</a>
-								</li>
-								<li>
-									<a href='#' data-group='photography' >
-										Photography
+										Main
 									</a>
 								</li>
 							</ul>
