My Projetcts Changes 0.1

--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
 												<figure>
 													
 													<!--project popup image-->
-													<img src='img/portfolio/1.jpg' alt>
+													<img src='img/portfolio/MoneyMinder.png' alt>
 												
 												</figure>
 												<div class='content' >
