--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
 													
 													<!--project popup description-->
 													<p>
-														Consul latine iudicabit eu vel. Cu has animal eruditi voluptatibus. Eu volumus explicari sed. Mel mutat vituperata suscipiantur et, et fabellas explicari adipiscing quo, no mucius euismod vis. Cu vim quem quod cibo.
+														The main goal of this project was to create a financial tracker for users to use for free. The app has a lot of functions to make money management easier.
 													</p>
 													
 												</div>
