Project 1 Description Changes

--- a/index.html
+++ b/index.html
@@ -589,6 +589,7 @@
 													<!--project popup description-->
 													<p>
 														The main goal of this project was to create a financial tracker for users to use for free. The app has a lot of functions to make money management easier.
+														Using Python for back end and MongoDB has a database. When it comes to front end I used HTML and CSS.
 													</p>
 													
 												</div>
