Added Data Groups in Projects

--- a/index.html
+++ b/index.html
@@ -556,14 +556,26 @@
 							<ul class='portfolio-filters' >
 								<li>
 									<a href='#' class='active' data-group='all' >
-										Main
+										All
+									</a>
+								</li>
+
+								<li>
+									<a href='#' data-group='complete' >
+									       Complete
+									</a>
+								</li>
+
+								<li>
+									<a href='#' data-group='ongoing' >
+										On Going
 									</a>
 								</li>
 							</ul>
 
 							<ul class='portfolio-items' >
 
-								<li data-groups='["all"]' >
+								<li data-groups='["all", "complete"]' >
 									<div class='inner' >
 										<img src='img/portfolio/MoneyMinder.png' alt>
 
@@ -603,7 +615,7 @@
 									</div>
 								</li>
 
-								<li>
+								<li data-groups='["all", "ongoing"]' >>
 									<div class='inner' >
 										<img src='img/portfolio/VertexAI.png' alt>
 
