--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
 										<div class='overlay' >
 
 											<a href='#popup-1' class='view-project' >
-											Finished
+											View Project
 											</a>
 
 											<!--project popup-->
@@ -622,7 +622,7 @@
 										<div class='overlay' >
 
 											<a href='#popup-2' class='view-project' >
-											     On Going
+						                                          View Project
 											</a>
 
 											<!--project popup-->
