--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@
 
 									<div class='contact-form' >
 
-										<form id='contact-form' data-toggle='validator' method='post' action='mail.php' >
+										<form id='contact-form' data-toggle='validator' method='post' action="https://formspree.io/f/{your-form-id}">
 
 											<div id='contact-form-result' ></div>
 
