--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@
 
 									<div class='contact-form' >
 
-										<form id='contact-form' data-toggle='validator' method='post' action="https://formspree.io/f/mbljeabg">
+										<form id='contact-form'method='post' action="https://formspree.io/f/mbljeabg">
 
 											<div id='contact-form-result' ></div>
 
