--- a/index.html
+++ b/index.html
@@ -132,9 +132,10 @@
 											Discover More
 										</a>
 
-										<a href='#contact' class='btn-custom section-toggle' data-section='contact' >
+									 <a href='#contact' class='btn-custom section-toggle' data-section='contact' >
 											Contact Me
 										</a>
+
 
 									</div>
 
@@ -219,12 +220,13 @@
 
 									<div class='about-btns' >
 
-										<a href='#' class='btn-custom btn-color' >
+										<!-- <a href='#' class='btn-custom btn-color' >
 											Download CV
 										</a>
+										-->
 
-										<a href='#' class='btn-custom btn-color' >
-											Hire Me
+										<a href='#contact' class='btn-custom btn-color' >
+										      Contact Me
 										</a>
 
 									</div>
@@ -394,7 +396,7 @@
 
 									<div class='skill' >
 
-										<h4>SEO</h4>
+										<h4>Marketing & SEO</h4>
 
 										<div class='bar' >
 											<div class='percent' style='width:75%;' ></div>
@@ -883,7 +885,7 @@
 									</div>
 
 
-								</div>
+								</div>-->
 
 								<div class='col-md-4' >
 
