--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
 
 				<!--=====================================================
 					Contact Section
-				=====================================================
+				=====================================================-->
 				<section id='contact' class='section contact-section border-d' >
 
 					<div class='section-block contact-block' >
@@ -830,7 +830,7 @@
 
 							<div class='row' >
 
-								<div class='col-md-8' >
+								<!--<div class='col-md-8' >
 
 									<div class='contact-form' >
 
@@ -882,10 +882,10 @@
 
 										</form>
 
-									</div>
+									</div> -->
 
 
-								</div>-->
+								</div>
 
 								<div class='col-md-4' >
 
