--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 						</li>
 
 						<li>
-							<a href='#portfolio' class='section-toggle' data-section='portfolio' >
+							<a href='#projects' class='section-toggle' data-section='portfolio' >
 								Projects
 							</a>
 						</li>
@@ -225,7 +225,7 @@
 										</a>
 										-->
 
-										<a href='#contact' class='btn-custom btn-color' >
+										<a href='#contact' data-section='contact' class='btn-custom btn-color' >
 										      Contact Me
 										</a>
 
@@ -544,7 +544,7 @@
 				<!--=====================================================
 					Portfolio Section
 				=====================================================-->
-				<section id='portfolio' class='section portfolio-section border-d' >
+				<section id='projects' class='section portfolio-section border-d' >
 
 					<div class='section-block portfolio-block' >
 
