Maybe Final Fixes :))

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 						</li>
 
 						<li>
-							<a href='#projects' class='section-toggle' data-section='portfolio' >
+							<a href='#projects' class='section-toggle' data-section='projects' >
 								Projects
 							</a>
 						</li>
@@ -352,7 +352,7 @@
 										<h4>ReactJs</h4>
 
 										<div class='bar' >
-											<div class='percent' style='width:70%;' ></div>
+											<div class='percent' style='width:80%;' ></div>
 										</div>
 
 									</div>
@@ -363,7 +363,7 @@
 										<h4>Python</h4>
 
 										<div class='bar' >
-											<div class='percent' style='width:60%;' ></div>
+											<div class='percent' style='width:66%;' ></div>
 										</div>
 
 									</div>
@@ -377,7 +377,7 @@
 										<h4>JavaScript</h4>
 
 										<div class='bar' >
-											<div class='percent' style='width:70%;' ></div>
+											<div class='percent' style='width:80%;' ></div>
 										</div>
 
 									</div>
@@ -399,7 +399,7 @@
 										<h4>Marketing & SEO</h4>
 
 										<div class='bar' >
-											<div class='percent' style='width:75%;' ></div>
+											<div class='percent' style='width:77%;' ></div>
 										</div>
 
 									</div>
