Nowgit add . Maybe Final Fixes :))

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
 
 		<title>Luis Martins Portfolio</title>
@@ -120,10 +119,10 @@
 							<div class='inner' >
 								<div class='intro-text' >
 
-									<h1>I'm Luis Martins</h1>
+									<h1>I am Luis Martins</h1>
 
 									<p>
-										A Junior Developer
+										A Developer
 									</p>
 
 									<div class='intro-btns' >
@@ -225,7 +224,7 @@
 										</a>
 										-->
 
-										<a href='#contact' data-section='contact' class='btn-custom btn-color' >
+										<a href='#contact' class='btn-custom btn-color' data-section='contact' >
 										      Contact Me
 										</a>
 
@@ -374,6 +373,43 @@
 
 									<div class='skill' >
 
+										<h4>MongoDB</h4>
+
+										<div class='bar' >
+											<div class='percent' style='width:90%;' ></div>
+										</div>
+
+									</div>
+
+
+									<div class='skill' >
+
+										<h4>SQL</h4>
+
+										<div class='bar' >
+											<div class='percent' style='width:80%;' ></div>
+										</div>
+
+									</div>
+
+
+									<div class='skill' >
+
+										<h4>Marketing</h4>
+
+										<div class='bar' >
+											<div class='percent' style='width:77%;' ></div>
+										</div>
+
+									</div>
+
+								</div>
+
+
+								<div class='col-md-6' >
+
+									<div class='skill' >
+
 										<h4>JavaScript</h4>
 
 										<div class='bar' >
@@ -396,7 +432,7 @@
 
 									<div class='skill' >
 
-										<h4>Marketing & SEO</h4>
+										<h4>SEO</h4>
 
 										<div class='bar' >
 											<div class='percent' style='width:77%;' ></div>
@@ -645,155 +681,6 @@
 													For my final CTeSP project, I’ve decided to create a small company focused on developing AI tools for other businesses. As part of this project, I’ll build a website using React and design an AI chatbot similar to ChatGPT, integrating two advanced AI models. While this will be a challenging endeavor given the time constraints, I’m confident we’ll bring this idea to life successfully.
 													<br><br>
 													Repository Link: https://github.com/LuisMartins21/VERTEX.ai
-													</p>
-
-												</div>
-
-											</div>
-
-										</div>
-
-									</div>
-								</li>
-
-								<li>
-									<div class='inner' >
-										<img src='img/portfolio/3.jpg' alt>
-
-										<div class='overlay' >
-
-											<a href='#popup-3' class='view-project' >
-												View Project
-											</a>
-
-											<!--project popup-->
-											<div id='popup-3' class='popup-box zoom-anim-dialog mfp-hide' >
-												<figure>
-
-													<!--project popup image-->
-													<img src='img/portfolio/3.jpg' alt>
-
-												</figure>
-												<div class='content' >
-
-													<!--project popup title-->
-													<h4>My Project Title</h4>
-
-													<!--project popup description-->
-													<p>
-														Consul latine iudicabit eu vel. Cu has animal eruditi voluptatibus. Eu volumus explicari sed. Mel mutat vituperata suscipiantur et, et fabellas explicari adipiscing quo, no mucius euismod vis. Cu vim quem quod cibo.
-													</p>
-
-												</div>
-
-											</div>
-
-										</div>
-
-									</div>
-								</li>
-
-
-								<li>
-									<div class='inner' >
-										<img src='img/portfolio/4.jpg' alt>
-
-										<div class='overlay' >
-
-											<a href='#popup-4' class='view-project' >
-												View Project
-											</a>
-
-											<!--project popup-->
-											<div id='popup-4' class='popup-box zoom-anim-dialog mfp-hide' >
-												<figure>
-
-													<!--project popup image-->
-													<img src='img/portfolio/4.jpg' alt>
-
-												</figure>
-												<div class='content' >
-
-													<!--project popup title-->
-													<h4>My Project Title</h4>
-
-													<!--project popup description-->
-													<p>
-														Consul latine iudicabit eu vel. Cu has animal eruditi voluptatibus. Eu volumus explicari sed. Mel mutat vituperata suscipiantur et, et fabellas explicari adipiscing quo, no mucius euismod vis. Cu vim quem quod cibo.
-													</p>
-
-												</div>
-
-											</div>
-
-										</div>
-
-									</div>
-								</li>
-
-								<li>
-									<div class='inner' >
-										<img src='img/portfolio/5.jpg' alt>
-
-										<div class='overlay' >
-
-											<a href='#popup-5' class='view-project' >
-												View Project
-											</a>
-
-											<!--project popup-->
-											<div id='popup-5' class='popup-box zoom-anim-dialog mfp-hide' >
-												<figure>
-
-													<!--project popup image-->
-													<img src='img/portfolio/5.jpg' alt>
-
-												</figure>
-												<div class='content' >
-
-													<!--project popup title-->
-													<h4>My Project Title</h4>
-
-													<!--project popup description-->
-													<p>
-														Consul latine iudicabit eu vel. Cu has animal eruditi voluptatibus. Eu volumus explicari sed. Mel mutat vituperata suscipiantur et, et fabellas explicari adipiscing quo, no mucius euismod vis. Cu vim quem quod cibo.
-													</p>
-
-												</div>
-
-											</div>
-
-										</div>
-
-									</div>
-								</li>
-
-								<li>
-									<div class='inner' >
-										<img src='img/portfolio/6.jpg' alt>
-
-										<div class='overlay' >
-
-											<a href='#popup-6' class='view-project' >
-												View Project
-											</a>
-
-											<!--project popup-->
-											<div id='popup-6' class='popup-box zoom-anim-dialog mfp-hide' >
-												<figure>
-
-													<!--project popup image-->
-													<img src='img/portfolio/6.jpg' alt>
-
-												</figure>
-												<div class='content' >
-
-													<!--project popup title-->
-													<h4>My Project Title</h4>
-
-													<!--project popup description-->
-													<p>
-														Consul latine iudicabit eu vel. Cu has animal eruditi voluptatibus. Eu volumus explicari sed. Mel mutat vituperata suscipiantur et, et fabellas explicari adipiscing quo, no mucius euismod vis. Cu vim quem quod cibo.
 													</p>
 
 												</div>
