Some Small Changes in About Section

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 						<li>
 							<a href='#about' class='section-toggle' data-section='about' >
-								About
+								About Me
 							</a>
 						</li>
 
@@ -303,7 +303,7 @@
 											<h4>UI/UX Design</h4>
 
 											<p>
-												I am passionate about creating pleasant user experiences through thoughtful UI/UX design. By understanding user needs and behaviors, I craft visually appealing and intuitive interfaces that are easy to navigate. I use tools like Figma and Adobe XD to develop wireframes and interactive prototypes, often engaging in user testing to gather feedback and refine my designs. My goal is to deliver digital experiences that blend creativity with usability, enhancing overall user satisfaction.
+												I am passionate about creating pleasant user experiences through thoughtful UI/UX design. By understanding user needs and behaviors, I craft visually appealing and intuitive interfaces that are easy to navigate. I use tools like Figma and Adobe XD to develop wireframes and interactive prototypes, often engaging in user testing to gather feedback and refine my designs. My goal is to deliver digital experiences that blend creativity with usability.
 											</p>
 
 										</div>
@@ -535,7 +535,7 @@
 											<span>2022-2023</span>
 											<br>
 											<br>
-											<span>High Voltage Testing and Data Analysis Application Development</span>
+											<span>High Voltage Testing and Data Analysis Application Development in Ludvika, Sweden</span>
 										</em>
 
 										<p>
