Some Small Changes in Contact Section

--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
 										</em>
 
 										<p>
-											Here is where I learned most of my programming skills and where I was able to create more projects that required teamwork to make it happen.
+											Here is where I learned most of my programming skills and where I was able to create larger projects that required teamwork to make it happen.
 										</p>
 
 									</div>
@@ -808,7 +808,7 @@
 
 											<p>
 												<br>
-												@luis_martins_25
+												<a href="https://www.instagram.com/luis_martins_25/">luis_martins_25</a>
 											</p>
 
 										</div>
