Some More Small Changes in Contact Section

--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
 
 											<p>
 												<br>
-												<a href="https://www.instagram.com/luis_martins_25/">luis_martins_25</a>
+												<a class="intagram-btn" href="https://www.instagram.com/luis_martins_25/" target="_blank">luis_martins_25</a>
 											</p>
 
 										</div>
