Some More Small Changes in Contact Section 1.4

--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
 
 								<li data-groups='["all", "complete"]' >
 									<div class='inner' >
-										<img src='img/portfolio/MoneyMinder.png' alt>
+										<img class="main-project-img" src='img/portfolio/MoneyMinder.png' alt>
 
 										<div class='overlay' >
 
@@ -642,7 +642,7 @@
 
 								<li data-groups='["all", "ongoing"]' >>
 									<div class='inner' >
-										<img src='img/portfolio/VertexAI.png' alt>
+										<img class="main-project-img" src='img/portfolio/VertexAI.png' alt>
 
 										<div class='overlay' >
 
