Some More Small Changes in Contact Section 1.5

--- a/index.html
+++ b/index.html
@@ -602,8 +602,9 @@
 
 								<li data-groups='["all", "complete"]' >
 									<div class='inner' >
-										<img class="main-project-img" src='img/portfolio/MoneyMinder.png' alt>
-
+									       <div class="main-project-img">
+										<img src='img/portfolio/MoneyMinder.png' alt>
+										</div>
 										<div class='overlay' >
 
 											<a href='#popup-1' class='view-project' >
@@ -642,7 +643,9 @@
 
 								<li data-groups='["all", "ongoing"]' >>
 									<div class='inner' >
-										<img class="main-project-img" src='img/portfolio/VertexAI.png' alt>
+									       <div class="main-project-img ">
+										<img src='img/portfolio/VertexAI.png' alt>
+										</div>
 
 										<div class='overlay' >
 
