TrackWeather project added

--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
 													<!--project popup description-->
 													<p>
 														The main goal of this project was to create a financial tracker for users to use for free. The app has a lot of functions to make money management easier.
-														Using Python for back end and MongoDB as a database. When it comes to front end I used HTML and CSS.
+														Using Python for back end and MongoDB as a database. When it comes to front end I used HTML and CSS. I also used the Flask framework to make the app more dynamic and in addition I integrated an API to get a graphic representation of the user's expenses and gains
 														<br><br>
 														Repository Link: https://github.com/LuisMartins21/ProjetoFinal
 													</p>
@@ -671,9 +671,51 @@
 
 													<!--project popup description-->
 													<p>
-													For my final CTeSP project, I’ve decided to create a small company focused on developing AI tools for other businesses. As part of this project, I’ll build a website using React and design an AI chatbot similar to ChatGPT, integrating two advanced AI models. While this will be a challenging endeavor given the time constraints, I’m confident we’ll bring this idea to life successfully.
+													For my final CTeSP project, I’ve decided to create a small company focused on developing AI tools for other businesses. As part of this project, I’ll build a website using ReactJS and design an AI chatbot similar to ChatGPT using the OpenAI API, integrating two advanced AI models. While this will be a challenging endeavor given the time constraints, I’m confident we’ll bring this idea to life successfully.
 													<br><br>
 													Repository Link: https://github.com/LuisMartins21/VERTEX.ai
+													</p>
+
+												</div>
+
+											</div>
+
+										</div>
+
+									</div>
+								</li>
+
+								<li data-groups='["all", "complete"]' >>
+									<div class='inner' >
+
+									       <div class="main-project-img ">
+											<img src='img/portfolio/' alt>
+									       </div>
+
+										<div class='overlay' >
+
+											<a href='#popup-2' class='view-project' >
+						                                          View Project
+											</a>
+
+											<!--project popup-->
+											<div id='popup-2' class='popup-box zoom-anim-dialog mfp-hide' >
+												<figure>
+
+													<!--project popup image-->
+													<img src='img/portfolio/' alt>
+
+												</figure>
+												<div class='content' >
+
+													<!--project popup title-->
+													<h4>TrackWeather</h4>
+
+													<!--project popup description-->
+													<p>
+													This is a simple app that I made to practice React Native. The app is a weather tracker that uses the OpenWeather API to get the weather data. The app is simple and easy to use, and it provides accurate weather information for any location. I used React Native to build the app, and I integrated the OpenWeather API to get the weather data. The app is responsive and works well on both Android and iOS devices.
+													<br><br>
+													Repository Link: https://github.com/LuisMartins21/trackweather
 													</p>
 
 												</div>
