TrackWeather logo added

--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
 									<div class='inner' >
 
 									       <div class="main-project-img ">
-											<img src='img/portfolio/' alt>
+											<img src='img/portfolio/trackweather.png' alt>
 									       </div>
 
 										<div class='overlay' >
@@ -703,7 +703,7 @@
 												<figure>
 
 													<!--project popup image-->
-													<img src='img/portfolio/' alt>
+													<img src='img/portfolio/trackweather.png' alt>
 
 												</figure>
 												<div class='content' >
