fix: Strech IMG

--- a/index.html
+++ b/index.html
@@ -727,6 +727,47 @@
 									</div>
 								</li>
 
+								<li data-groups='["all", "ongoing"]' >>
+									<div class='inner' >
+
+									       <div class="main-project-img ">
+											<img src='img/portfolio/StockMaster.png' alt>
+									       </div>
+
+										<div class='overlay' >
+
+											<a href='#popup-4' class='view-project' >
+						                                          View Project
+											</a>
+
+											<!--project popup-->
+											<div id='popup-4' class='popup-box zoom-anim-dialog mfp-hide' >
+												<figure>
+
+													<!--project popup image-->
+													<img src='img/portfolio/StockMaster.png' alt>
+
+												</figure>
+												<div class='content' >
+
+													<!--project popup title-->
+													<h4>StockMaster</h4>
+
+													<!--project popup description-->
+													<p>
+													In this project I assumed the role of Product Owner and I was responsible for the development of the app and team manegement. The app consists in a ERP for business that allows the user to manage the stock and sales of products. The app was developed using ReactJS and NodeJS for the back end. The app is responsive and easy to use. I also integrated an API to get the stock data and a graphic representation of the sales.
+													<br><br>
+													Repository Link: https://github.com/tskxz/stockmaster</p>
+
+												</div>
+
+											</div>
+
+										</div>
+
+									</div>
+								</li>
+
 							</ul>
 
 						</div>
