fix: Spelling Correction

--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@
 
 													<!--project popup description-->
 													<p>
-													In this project I assumed the role of Product Owner and I was responsible for the development of the app and team manegement. The app consists in a ERP for business that allows the user to manage the stock and sales of products. The app was developed using ReactJS and NodeJS for the back end. The app is responsive and easy to use. I also integrated an API to get the stock data and a graphic representation of the sales.
+													In this project I assumed the role of Product Owner and I was responsible for the development of the app and team management. The app consists in a ERP for companies that allows the user to manage the stock and sales of products. The app was developed using ReactJS and NodeJS for the back end. The app is responsive and easy to use. I also integrated an API to get the stock data and a graphic representation of the sales.
 													<br><br>
 													Repository Link: https://github.com/tskxz/stockmaster</p>
 
